# Universal_interface_adapter

./: GPIO.kicad_sch  README.md  _autosave-universal_interface_adapter.kicad_prl  analog.kicad_sch  can.kicad_sch  fp-info-cache  fp-lib-table  isolated_inputs.kicad_sch  power.kicad_sch  relay_outputs.kicad_sch  rs422_485_232.kicad_sch  sym-lib-table  uart_i2c_spi.kicad_sch  universal_interface_adapter.kicad_prl  universal_interface_adapter.kicad_pro  universal_interface_adapter.kicad_sch  ~universal_interface_adapter.kicad_sch.lck
bom/: ibom.html
firmware/: Cargo.toml  Embed.toml  README.md  build.rs
firmware/.VSCodeCounter/2026-03-26_18-46-02/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
firmware/.VSCodeCounter/2026-03-27_21-40-35/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
firmware/.cargo/: config.toml
firmware/src/: main.rs
firmware/src/cli/: cli_config.rs  cli_loop.rs  command.rs  mod.rs
firmware/src/cli/commands/: analog.rs  can.rs  clear.rs  echo.rs  gpios.rs  i2c.rs  isolated_inputs.rs  led.rs  mod.rs  mosfets.rs  relays.rs  rs232.rs  rs422.rs  setup.rs  spi.rs  uart.rs
firmware/src/io_interface/: serial.rs
libs/: LEG-24--3DModel-STEP-269445.STEP  TEA 1-0505--3DModel-STEP-269445.STEP
libs/ADM3251EARWZ-REEL/: ADM3251EARWZ-REEL.kicad_sym  ADM3251EARWZ-REEL.step  SOIC127P1032X265-20N.kicad_mod
libs/LEG-24/: LEG-24.kicad_sym  LEG-24.step  RELAY_LEG-24.kicad_mod
production/: bom.csv  designators.csv  netlist.ipc  positions.csv
(+6 files in other folders)
