[package]
name = "rust_hal_test_stm32f446vet6"
version = "0.1.0"
authors = ["Krzysztof Sikora <93350855+411568@users.noreply.github.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"

usb-device = "0.3"
usbd-serial = "0.2"
static_cell = "2.1"
heapless = "0.8" 
nb = "1.0"


[dependencies.stm32f4xx-hal]
version = "0.23.0"
features = ["stm32f446", "usb_fs"]



# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
